trying to use jquery to fix background jumping

--- a/main.css
+++ b/main.css
@@ -252,7 +252,6 @@ Home Content
   background-repeat: no-repeat;
   background-size: auto;
   margin-bottom: 100px;
-  height: 100vh;
   z-index: -1;
 }
 
